force-app/main/default/objects/Completed_Workflow__c/Completed_Workflow__c.object-meta.xml
<CustomObject>
    <label>Completed Workflow</label>
    <nameField>
        <label>Job Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Completed Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>