force-app/main/default/objects/Completed_Workflow__c/fields/Client_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Job_Id__c</fullName>
    <label>Client Job Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>