force-app/main/default/objects/Completed_Workflow__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>