force-app/main/default/objects/Completed_Workflow__c/fields/Flow_Job_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Flow_Job_Metadata__c</fullName>
    <label>Flow Job Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>