force-app/main/default/objects/Completed_Workflow__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label>Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>