force-app/main/default/objects/Completed_Workflow__c/fields/Modified__c.field-meta.xml
<CustomField>
    <fullName>Modified__c</fullName>
    <label>Modified</label>
    <type>DateTime</type>
</CustomField>