force-app/main/default/objects/Completed_Workflow__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>