force-app/main/default/objects/Completed_Workflow__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>