force-app/main/default/objects/Completed_Workflow__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Onsight_Flow_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>