force-app/main/default/objects/Completed_Workflow__c/fields/Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Id__c</fullName>
    <label>Workflow Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>