force-app/main/default/objects/Completed_Workflow__c/fields/Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Name__c</fullName>
    <label>Workflow Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>